[package]
name = "skribo"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[features]
loader-freetype-default = ["font-kit/loader-freetype-default", "freetype", "harfbuzz/build-native-freetype"]

[dependencies]
harfbuzz = {git = "https://github.com/zhuge/rust-harfbuzz.git"}
font-kit = { version = "0.10"} #, features = ["loader-freetype-default"] }
pathfinder_geometry = "0.5.1"
unicode-normalization = "0.1.13"
log = "0.4.11"

[dependencies.freetype]
version = "0.7"
optional = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
core-graphics = "0.22"
core-text = "19.1.0"

[target.'cfg(not(any(target_family = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
freetype = "0.7"